--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,7 +1,10 @@
 .Header {
-    background-color: #575e67;
-    color: white;
+    background-color: #8D99AE;
+    /*old-grey: 575e67*/
+    color: #EDF2F4;
 }
+
+
 
 .Header-header {
     margin: 0; 
@@ -20,13 +23,13 @@ nav {
 
 nav a {
     text-decoration: none;
-    color: white;
+    color: #EDF2F4;
     padding: 10px;
     margin: 0 10px;
 }
 
 nav span {
-    color: white;
+    color: #EDF2F4;
     padding: 0 5px;
 }
 
