--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,7 +1,7 @@
 
 .title {
     font-weight: bold;
-    color: white;
+    color: #EDF2F4;
     padding: 40 px; 
 }
 
@@ -14,8 +14,8 @@
 }
 
 .button {
-    background-color: #c77c20;
-    color: white;
+    background-color: #EF233C;
+    color: #EDF2F4;
     padding: 10px 20px
 }
 
@@ -23,11 +23,17 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 21%;
+    width: 50%;
+    margin: 0 auto
 }
 
 .left, .right {
     padding: 20px;
     box-sizing: border-box;
+}
+
+.left {
+    text-align: right;
 }
 
 .right {
