--- a/src/components/detailed.css
+++ b/src/components/detailed.css
@@ -63,7 +63,7 @@
   
   .questionText {
     font-size: 110%;
-    font-family: 'Courier New', monospace;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     margin-bottom: 10px;
     text-align: left;
