--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,25 +1,13 @@
 
-.title {
+.title1 {
     font-weight: bold;
     color: #EDF2F4;
-    padding: 40 px; 
+    margin-top: 20px;
+    font-size: 50px ;
 }
 
-.header {
-    font-size: large;
-}
 
-.basicbutton {
-    padding: 40px;
-}
-
-.button {
-    background-color: #EF233C;
-    color: #EDF2F4;
-    padding: 10px 20px
-}
-
-.grid-container {
+.grid-container1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 21%;
@@ -27,15 +15,8 @@
     margin: 0 auto
 }
 
-.left, .right {
+.right1 {
     padding: 20px;
     box-sizing: border-box;
-}
-
-.left {
-    text-align: right;
-}
-
-.right {
     text-align: left;
 }
