--- a/src/components/styles/Detailed.css
+++ b/src/components/styles/Detailed.css
@@ -123,9 +123,10 @@
   text-align: center;
 }
 
-.submit-button {
+.submit-button3 {
   position: relative;
-  align-items: center;
-  text-align: center;
-  padding: 10px;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    padding-bottom: 5%;
 }
