new style for home page

--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,6 +1,6 @@
 .Header {
-    background-color: #8D99AE;
-    /*old-grey: 575e67*/
+    background-color: transparent;
+    /*old-blue: 8D99AE*/
     color: #EDF2F4;
 }
 
