--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,11 @@ html, body {
   height: 100%;
   margin: 0;
 }
+
 .App {
   text-align: center;
   background-color: #2B2D42;
-  /*old-blue: 12355B*/
+  /*old-blue: 2B2D42*/
   color: #EDF2F4;
   min-height: 100vh;
   
