Changed name and setting up new rocket positions

--- a/src/components/styles/Basic2.css
+++ b/src/components/styles/Basic2.css
@@ -74,3 +74,19 @@
     text-align: center;
     padding: 10px;
   }
+
+  .rocket-container {
+    position: absolute;
+    left: 30%;
+    height: 30%;
+    width:50%;
+    top: 10%;
+}
+
+.rocket-image {
+  background-image: url("../../assets/images/rocket.png");
+background-size: contain;
+background-repeat: no-repeat;
+background-color: transparent;
+height: 50%;
+}
