--- a/src/components/styles/Home3.css
+++ b/src/components/styles/Home3.css
@@ -62,28 +62,28 @@
 }
 
 .text-box1 {
-    position: absolute;  /* Position the text box relative to the container */
-    top: 0%;  /* Position it below the star image */
-    background-color: rgba(0, 0, 0, 0.7);  /* Semi-transparent background */
+    position: absolute;  
+    top: 0%; 
+    background-color: rgba(0, 0, 0, 0.7); 
     color: white;
     right: 0%;
     left: 40%;
     padding: 10px;
     border-radius: 5px;
-    visibility: hidden;  /* Hide the text box by default */
-    opacity: 0;  /* Make the text box invisible */
+    visibility: hidden;  
+    opacity: 0;  
     transition: opacity 0.3s ease, visibility 0.3s ease;
     font-weight: none ;
     font-style: italic;
 }
 
 .star-container1:hover .text-box1 {
-    visibility: visible;  /* Make the text box visible */
-    opacity: 1;  /* Make the text box fully visible */
+    visibility: visible;  
+    opacity: 1;  
 }
 
 .star-image1:hover {
-    filter: brightness(1.5); /* Make the image brighter */
+    filter: brightness(1.5); 
 }
 
 .star-container2 {
@@ -107,24 +107,24 @@
 }
 
 .text-box2 {
-    position: absolute;  /* Position the text box relative to the container */
-    top: 10%;  /* Position it below the star image */
-    background-color: rgba(0, 0, 0, 0.7);  /* Semi-transparent background */
+    position: absolute;  
+    top: 10%;  
+    background-color: rgba(0, 0, 0, 0.7);  
     color: white;
     left: -5%;
     right: 45%;
     padding: 10px;
     border-radius: 5px;
-    visibility: hidden;  /* Hide the text box by default */
-    opacity: 0;  /* Make the text box invisible */
+    visibility: hidden;  
+    opacity: 0;  
     transition: opacity 0.3s ease, visibility 0.3s ease;
     font-weight: none ;
     font-style: italic;
 }
 
 .star-container2:hover .text-box2 {
-    visibility: visible;  /* Make the text box visible */
-    opacity: 1;  /* Make the text box fully visible */
+    visibility: visible;  
+    opacity: 1; 
 }
 
 .star-image2:hover {
