--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,3 +1,16 @@
 .About {
     text-align: center;
 }
+
+.basic-image {
+    background-image: url("../../assets/images/earthimage.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  transition: background-image 1s ease-in-out, opacity 1s ease-in-out;
+
+  }
