new results page

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html, body {
 
 .App {
   text-align: center;
-  background-color: #2B2D42;
+  background-color: #231f20;
   /*old-blue: 2B2D42*/
   color: #EDF2F4;
   min-height: 100vh;
