fixed layout of results page

--- a/src/components/styles/Basic2.css
+++ b/src/components/styles/Basic2.css
@@ -7,7 +7,7 @@
   }
 
   .basic-image {
-    background-image: url("../../assets/images/earthimage.jpg");
+    background-image: url("../../assets/images/space.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
