--- a/src/components/styles/Basic.css
+++ b/src/components/styles/Basic.css
@@ -27,12 +27,11 @@
     text-align: center;
   }
   
-  /* Radio button group container */
   .radio-group {
       display: flex;
       flex-direction: column;
-      align-items: flex-start; /* Align radio buttons under the question */
-      margin-left: 50px; /* Adjust this margin for further alignment */
+      align-items: flex-start; 
+      margin-left: 50px; 
     }
   
     .radio-text {
@@ -40,7 +39,6 @@
       margin-left: 10px;
     }
     
-    /* Container for radio buttons */
     .radio-container {
       display: flex;
       align-items: center;
@@ -50,14 +48,12 @@
       font-size: 16px;
     }
     
-    /* Hide the default radio button */
     .radio-container input[type="radio"] {
       position: absolute;
       opacity: 0;
       cursor: pointer;
     }
     
-    /* Custom radio button */
     .radio-custom {
       position: relative;
       height: 20px;
@@ -69,12 +65,10 @@
       cursor: pointer;
     }
     
-    /* Style for when the radio button is checked */
     .radio-container input[type="radio"]:checked + .radio-custom {
-      background-color: #2196F3; /* Custom color for selected radio button */
+      background-color: #2196F3; 
     }
     
-    /* Add the inner circle when the radio button is checked */
     .radio-custom::after {
       content: "";
       position: absolute;
@@ -104,19 +98,19 @@
     }
   
     .input-box {
-      width: 100%; /* Full-width input */
-      max-width: 100%; /* Limits the width on larger screens */
+      width: 100%; 
+      max-width: 100%; 
       padding: 10px 15px;
       font-size: 12px;
-      border: 1px solid #ccc; /* Light grey border */
-      border-radius: 5px; /* Rounded corners */
+      border: 1px solid #ccc; 
+      border-radius: 5px; 
       outline: none;
-      transition: border-color 0.3s ease; /* Smooth focus transition */
+      transition: border-color 0.3s ease; 
   }
   
   .input-box:focus {
-      border-color: #007BFF; /* Blue border on focus */
-      box-shadow: 0 0 5px rgba(0, 123, 255, 0.3); /* Soft blue shadow on focus */
+      border-color: #007BFF;
+      box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
   }
   
   .responses {
