--- a/src/components/styles/Detailed.css
+++ b/src/components/styles/Detailed.css
@@ -3,7 +3,7 @@
 }
 
 .detailed-image {
-  background-image: url("../../assets/images/earthimage.jpg");
+  background-image: url("../../assets/images/space.png");
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
