--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -26,6 +26,8 @@ nav a {
     color: #EDF2F4;
     padding: 10px;
     margin: 0 10px;
+    font-weight: bold;
+    font-size: 1.1rem;
 }
 
 nav span {
