--- a/src/components/styles/Detailed.css
+++ b/src/components/styles/Detailed.css
@@ -20,26 +20,26 @@
   background-size: contain; 
   background-repeat: no-repeat;
   background-position: center;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   position: absolute; 
   top: -5vh;
-  left: 4.5vw;
+  left: 6.2vw;
   z-index: 1;
   opacity: 1; 
   pointer-events: none;
-  scale: 0.7;
+  scale: 0.8;
 }
 
 .detailed-quiz {
-  max-width: 600px;
+  max-width: 37vw;
   margin: 0 auto;
   padding: 20px;
   text-align: left;
   font-family: Arial, sans-serif;
   z-index: 2;
   position: relative;
-  top: 23%;
+  top: 20vh;
 }
 
 .detailed-quiz {
