--- a/src/components/styles/Home3.css
+++ b/src/components/styles/Home3.css
@@ -67,7 +67,7 @@
     background-color: rgba(0, 0, 0, 0.7); 
     color: white;
     right: 0%;
-    left: 40%;
+    left: 22vw;
     padding: 10px;
     border-radius: 5px;
     visibility: hidden;  
@@ -111,8 +111,7 @@
     top: 10%;  
     background-color: rgba(0, 0, 0, 0.7);  
     color: white;
-    left: -5%;
-    right: 45%;
+    right: 26vw;
     padding: 10px;
     border-radius: 5px;
     visibility: hidden;  
