--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,23 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, boVerdana, Geneva, Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-   cursor: url('./assets/images/hovercursor.cur'), auto
-
+  cursor: url('./assets/images/hovercursor.cur'), auto;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 a:hover {
   cursor: url('./assets/images/crosshaircur.cur'), pointer;
+}
+
+/* Custom cursor for hovering over text boxes */
+input[type="text"]:hover, textarea:hover {
+  cursor: url('./assets/images/crosshaircur.cur'), text;
+}
+
+/* Optional: Add focus behavior for text boxes */
+input[type="text"]:focus, textarea:focus {
+  cursor: url('./assets/images/crosshaircur.cur'), text;
 }
