Fixed cursor not showing up when hovering over quiz buttons. Also changed API model for better parsing on results page

--- a/src/components/styles/Detailed.css
+++ b/src/components/styles/Detailed.css
@@ -181,3 +181,8 @@
   justify-content: center;
   display: flex;
 }
+
+/* Custom cursor for quiz buttons */
+.quiz-button:hover {
+  cursor: url('../../assets/images/crosshaircur.cur') 16 16, pointer;
+}
