--- a/src/components/styles/Results2.css
+++ b/src/components/styles/Results2.css
@@ -33,6 +33,7 @@
   justify-content: center;
   align-items: center;
   transform: translate(-50%, -50%);
+  cursor: pointer;
 }
 
 .planet img {
@@ -43,20 +44,51 @@
 .planet-text {
   position: absolute;
   color: white;
-  font-size: 1rem;
+  font-size: 1.3rem;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
   font-family: Arial, sans-serif;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  transition: opacity 0.3s ease;
-  visibility: hidden;
   background-color: rgba(0, 0, 0, 0.7);
   padding: 10px;
   border-radius: 5px;
-  word-wrap: break-word;
-  width: 250%;
-  height: 50%;
+  opacity: 0;
+  transition:
+    opacity 0.3s ease,
+    transform 0.3s ease;
+  width: 160%;
+  text-align: center;
+}
+
+.sun:hover .sun-text {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1.05);
+}
+
+.sun-text {
+  position: absolute;
+  color: white;
+  font-size: 2.5rem;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  font-family: Arial, sans-serif;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 10px;
+  border-radius: 5px;
+  opacity: 0;
+  transition:
+    opacity 0.3s ease,
+    transform 0.3s ease;
+  width: 150%;
+  text-align: center;
+}
+
+.planet:hover .planet-text {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1.05);
 }
 
 .mars {
@@ -97,21 +129,4 @@
 .mercury {
   top: 25%;
   left: 27%;
-}
-
-.mars-text {
-  position: absolute;
-  color: white;
-  font-size: 1.2em;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-  font-family: Arial, sans-serif;
-  visibility: hidden;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.planet:hover .planet-text {
-  visibility: visible;
-  opacity: 1;
 }
