--- a/src/components/styles/Home3.css
+++ b/src/components/styles/Home3.css
@@ -1,18 +1,16 @@
 .title1 {
-    font-weight: bold;
-    color: white;
-    margin-top: 20px;
-    font-size: 50px ;
+  font-weight: bold;
+  color: white;
+  margin-top: 20px;
+  font-size: 50px;
 }
 
 .image-container {
-    position: relative;
-    display: inline-block;
-    height: 100vh;
-    width: 100%;
-
-
-  }
+  position: relative;
+  display: inline-block;
+  height: 100vh;
+  width: 100%;
+}
 
 .home-image {
   background-image: url("../../assets/images/earthimage.jpg");
@@ -26,15 +24,15 @@
 }
 
 .rocket-container {
-    position: absolute;
-    left: 30%;
-    height: 30%;
-    width:50%;
-    top: 10%;
+  position: absolute;
+  left: 30%;
+  height: 30%;
+  width: 50%;
+  top: 10%;
 }
 
 .rocket-image {
-    background-image: url("../../assets/images/rocket.png");
+  background-image: url("../../assets/images/rocket.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-color: transparent;
@@ -42,93 +40,95 @@
 }
 
 .star-container1 {
-    position: absolute;
-    left: 30%;
-    height: 30%;
-    width:60%;
-    top: 20%;
+  position: absolute;
+  left: 30%;
+  height: 30%;
+  width: 60%;
+  top: 20%;
 }
 
 .star-image1 {
-    background-image: url("../../assets/images/starcrop.png");
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    background-size: contain;
-    transform: scale(0.5);
-    background-repeat: no-repeat;
-    
+  background-image: url("../../assets/images/starcrop.png");
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  background-size: contain;
+  transform: scale(0.5);
+  background-repeat: no-repeat;
 }
 
 .text-box1 {
-    position: absolute;  
-    top: 0%; 
-    background-color: rgba(0, 0, 0, 0.7); 
-    color: white;
-    right: 0%;
-    left: 22vw;
-    padding: 10px;
-    border-radius: 5px;
-    visibility: hidden;  
-    opacity: 0;  
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-    font-weight: none ;
-    font-style: italic;
+  position: absolute;
+  top: 0%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  right: 0%;
+  left: 22vw;
+  padding: 10px;
+  border-radius: 5px;
+  visibility: hidden;
+  opacity: 0;
+  transition:
+    opacity 0.3s ease,
+    visibility 0.3s ease;
+  font-weight: bold;
+  font-style: italic;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .star-container1:hover .text-box1 {
-    visibility: visible;  
-    opacity: 1;  
+  visibility: visible;
+  opacity: 1;
 }
 
 .star-image1:hover {
-    filter: brightness(1.5); 
+  filter: brightness(1.5);
 }
 
 .star-container2 {
-    position: absolute;
-    right: 0%;
-    height: 30%;
-    width:60%;
-    bottom: 20%;
+  position: absolute;
+  right: 0%;
+  height: 30%;
+  width: 60%;
+  bottom: 20%;
 }
 
 .star-image2 {
-    background-image: url("../../assets/images/starcrop.png");
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    right: -30%;
-    background-color: transparent;
-    background-size: contain;
-    transform: scale(0.5);
-    background-repeat: no-repeat;
+  background-image: url("../../assets/images/starcrop.png");
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  right: -30%;
+  background-color: transparent;
+  background-size: contain;
+  transform: scale(0.5);
+  background-repeat: no-repeat;
 }
 
 .text-box2 {
-    position: absolute;  
-    top: 10%;  
-    background-color: rgba(0, 0, 0, 0.7);  
-    color: white;
-    right: 26vw;
-    padding: 10px;
-    border-radius: 5px;
-    visibility: hidden;  
-    opacity: 0;  
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-    font-weight: none ;
-    font-style: italic;
+  position: absolute;
+  top: 10%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  right: 26vw;
+  padding: 10px;
+  border-radius: 5px;
+  visibility: hidden;
+  opacity: 0;
+  transition:
+    opacity 0.3s ease,
+    visibility 0.3s ease;
+  font-weight: bold;
+  font-style: italic;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .star-container2:hover .text-box2 {
-    visibility: visible;  
-    opacity: 1; 
+  visibility: visible;
+  opacity: 1;
 }
 
 .star-image2:hover {
-    filter: brightness(1.5); 
+  filter: brightness(1.5);
 }
-
-
-
