--- a/src/components/styles/Loading.css
+++ b/src/components/styles/Loading.css
@@ -1,12 +1,47 @@
 .loading-image {
-    background-image: url("../../assets/images/rocket-3972.gif");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    filter: contrast(160%) brightness(70%) blur(0px);
-    transition: background-image 1s ease-in-out, opacity 1s ease-in-out;
+  background-image: url("../../assets/images/rocket-3972.gif");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  filter: contrast(160%) brightness(70%) blur(0px);
+  transition:
+    background-image 1s ease-in-out,
+    opacity 1s ease-in-out;
+}
 
+.orbit-container {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  background-color: black;
+  border-radius: 50%;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.planet-revolved {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+  background-image: url("../../assets/images/planets/earth.png"); /* Replace with your planet image */
+  background-size: cover;
+  border-radius: 50%;
+}
+
+.rocket {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  background-image: url("../../assets/images/rocket.png"); /* Replace with your rocket image */
+  background-size: cover;
+  border-radius: 50%;
+  animation: orbit 5s linear infinite; /* Adjust speed as needed */
 }
